# a2db

./: .agent-harness.yml  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-28-v1-implementation.md
src/a2db/: cli.py  connections.py  drivers.py  executor.py  formatter.py  mcp_server.py  schema.py  sql.py
tests/: conftest.py  test_connections.py  test_drivers.py  test_executor.py  test_formatter.py  test_mcp_server.py  test_schema.py  test_sql.py
